--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
-      <pShenava Care is a company which provides solution for your tech problems. Right now, we are working on maing our service better.
+      <p>Shenava Care is a company which provides solution for your tech problems. Right now, we are working on maing our service better.
       so please free to send a mail <a href="mailto:shenavacare@gmail.com">shenavacare@gmail.com</a> where we will respond with a soltuion within 24 hours.</p>
     </div>
   </body>
