--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <title>Shenava Care</title>
   </head>
   <body>
+    <center>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
       <p>Shenava Care is a company which provides solution for your tech problems. Right now, we are working on maing our service better.
       so please free to send a mail <a href="mailto:shenavacare@gmail.com">shenavacare@gmail.com</a> where we will respond with a soltuion within 24 hours.</p>
-    </div>
+      </div>
+      </center>
   </body>
 </html>
