--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <center>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
-      <p>Shenava Care is a company which provides solution for your tech problems. Right now, we are working on maing our service better.
-      so please free to send a mail <a href="mailto:shenavacare@gmail.com">shenavacare@gmail.com</a> where we will respond with a soltuion within 24 hours.</p>
-      </div>
-      </center>
+      <p>Shenava Care is a company which provides solutions for your tech problems. At the moment, we are in the process of
+        developing products that will
+        help people find solutions for their tech problems more efficiently and faster. Currently, our Mail Service is available and more
+        information on the service is below.</p>
+    </div>
+    <div class="Mail-Service">
+      <h1>Mail Service</h1>
+      <p>Shenava Care Mail Service is a dedicated mail service where we provide dedicated solutions for your tech problems. 
+        All you have to do is to send a mail about your problem to <a href="mailto:shenavacare@gmail.com">shenavacare@gmail.com</a>.
+        We will respond back with more information on how you can solve the problem. Note that is a pilot project and is in it's
+        early stage as we are testing out the service.</p>
+      
+   </center>
   </body>
 </html>
