--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         All you have to do is to send a mail about your problem to <a href="mailto:shenavacare@gmail.com">shenavacare@gmail.com</a>.
         We will respond back with more information on how you can solve the problem. Note that is a pilot project and is in it's
         early stage as we are testing out the service.</p>
+      </div>
       
    </center>
   </body>
