--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <center>
+    <div class="title">
+      <h1>Shenava Care</h1>
+      </div>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
       <p>Shenava Care is a company which provides solutions for your tech problems. At the moment, we are in the process of
