--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <center>
     <div class="title">
-      <h1>Shenava Care</h1>
+      <h1>SHENAVA CARE</h1>
       </div>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
