--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
       </div>
       
    </center>
+    
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDQSP04y38RzhsMQFdSZxhp0NktZ7Y7xoM",
+    authDomain: "shenava-care.firebaseapp.com",
+    databaseURL: "https://shenava-care.firebaseio.com",
+    projectId: "shenava-care",
+    storageBucket: "",
+    messagingSenderId: "997653121141"
+  };
+  firebase.initializeApp(config);
+</script>
   </body>
 </html>
