--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=main.css />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
+    <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDQSP04y38RzhsMQFdSZxhp0NktZ7Y7xoM",
+    authDomain: "shenava-care.firebaseapp.com",
+    databaseURL: "https://shenava-care.firebaseio.com",
+    projectId: "shenava-care",
+    storageBucket: "",
+    messagingSenderId: "997653121141"
+  };
+  firebase.initializeApp(config);
+</script>
+    <script src="script.js"></script>
   </head>
   <body>
     <center>
@@ -24,21 +38,14 @@
         We will respond back with more information on how you can solve the problem. Note that is a pilot project and is in it's
         early stage as we are testing out the service.</p>
       </div>
+    <!-- <div class="directory">
+       <h1>Directory</h1>
+       <p>For tech solutions, 
+       <button type="button">
+     </div> -->
       
    </center>
     
-<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDQSP04y38RzhsMQFdSZxhp0NktZ7Y7xoM",
-    authDomain: "shenava-care.firebaseapp.com",
-    databaseURL: "https://shenava-care.firebaseio.com",
-    projectId: "shenava-care",
-    storageBucket: "",
-    messagingSenderId: "997653121141"
-  };
-  firebase.initializeApp(config);
-</script>
+
   </body>
 </html>
