--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <center>
     <div class="title">
-      <h1>SHENAVA CARE</h1>
+      <img src="Images/aphicDesign.png" alt="Shenava Care Logo" >
       </div>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
