--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <center>
     <div class="title">
-      <img src="Images/aphicDesign.png" alt="Shenava Care Logo" height="42">
+      <img src="Images/aphicDesign.png" alt="Shenava Care Logo" height="100" width="100">
       </div>
     <div class="About">
       <h1>Welcome to Shenava Care</h1>
